@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam nodesep 150


'left to right direction

hide circle
hide methods

'title Domain Model: US012



'note right: Test

class Employee {
    email
    name
    passportNumber
    taxNumber
    phoneNumber
 }

class Property{
    price
    area
    distanceToCentre
    photographs
    date
}

class PurchaseOrder{
    orderAmount
    wasAccepted
    creationDate
}


 class Role {
    id
    description
 }

 class Address{
     streetAddress
     city
     state
     zipCode
 }

 class Store {
     id
     designation
     email
     phoneNumber

  }



class Client {
    email
      name
      passportNumber
      taxNumber
      phoneNumber
}

class Announcement {

commission
date
rentDuration
listedPrice

}

class BusinessType{
description
}

class PropertyType{
description
}

class Inhabitable{
bedroomNumber
bathroomNumber
parkingSpaces
equipmentList
}

class House{
hasBasement
hasLoft
sunExposure

}

class Commission {
value
typeCommission
}




Client "1" -- "1" Address: > has an
Client "1" - "1" Property: < has a

Address  "1" - "1"   Employee : < has an
Property  "1" - "1"  Address : > has an
Address  "1" - "1"   Store: < has an
Employee  "1" -- "1"  Store: > has a
Employee "1" -- "1..*" Role: > has
Property "1" - "1"  Store: > has a

Announcement "*" - "1"  BusinessType : > cataloged as
Commission "1" - "1" Announcement : < has a
Announcement "1" -- "1"  Property : > refers to
Announcement "1" -- "1"  Employee: > has a


Property "*" -- "1" PropertyType: > cataloged as

Property <|--  Inhabitable
Inhabitable <|-- House

PurchaseOrder "1" -- "1" Client : < has a
PurchaseOrder "1" - "1" Announcement : < has a


@enduml